com.salesforce.ide.core.test/filemetadata/complete/objects/SampleCustomObject__c.object
<CustomObject>
    <description>xyz</description>
    <label>SampleCustomObject1</label>
    <fields>
        <fullName>Alpha1__c</fullName>
        <inlineHelpText>rtfm</inlineHelpText>
        <label>Alpha1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beta__c</fullName>
        <label>Beta</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox1__c</fullName>
        <defaultValue>true</defaultValue>
        <description>checkbox1</description>
        <label>Checkbox1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox2</description>
        <label>Checkbox2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <description>F1Desc</description>
        <label>Field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasExtId__c</fullName>
        <externalId>true</externalId>
        <indexed>true</indexed>
        <label>HasExtId</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexedCheckboxTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <indexed>true</indexed>
        <label>IndexedCheckboxTrue</label>
        <trueValueIndexed>true</trueValueIndexed>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndexedCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <indexed>true</indexed>
        <label>IndexedCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongLongTextArea__c</fullName>
        <label>LongLongTextArea</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PicklistX__c</fullName>
        <label>PicklistXLabel</label>
        <picklist>
            <picklistValues>
                <fullName>PLX1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLX2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLX3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PLX4</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PicklistY__c</fullName>
        <label>PicklistYLabel</label>
        <picklist>
            <picklistValues>
                <fullName>PLY3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLY2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLY1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequiredNonUniqueIndex__c</fullName>
        <indexed>true</indexed>
        <label>RequiredNonUniqueIndex</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueCaseInsensitive__c</fullName>
        <indexed>true</indexed>
        <label>UniqueCaseInsensitive</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueCaseSensitive__c</fullName>
        <caseSensitive>true</caseSensitive>
        <indexed>true</indexed>
        <label>UniqueCaseSensitive</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <nameField>
        <label>NameField</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SampleCustomObject1s</pluralLabel>
    <recordTypes>
        <fullName>RT1</fullName>
        <label>RT1</label>
        <active>true</active>
    </recordTypes>
    <recordTypes>
        <fullName>RT2</fullName>
        <label>RT2</label>
        <active>true</active>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>